--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/react-router-hash-link": "^2.4.9",
