--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: Install Dependencies
         run: npm install
@@ -55,7 +56,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the dist directory as an artifact
+          # Upload dist folder
           path: './dist'
 
       - name: Deploy to GitHub Pages
