--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -49,6 +49,11 @@ jobs:
 
       - name: Build Project
         run: npm run build
+        env:
+          VITE_WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
+          ACTIVE_NETWORK: ${{ secrets.ACTIVE_NETWORK }}
+          EMAIL_TOKEN: ${{ secrets.EMAIL_TOKEN }}
+          AUTH_WEB_ADDRESS: ${{ secrets.AUTH_WEB_ADDRESS }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
