--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.32.0",
+    "@web3modal/wagmi": "^4.1.11",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -27,6 +29,8 @@
     "react-use": "^17.5.0",
     "rxjs": "^7.8.1",
     "slick-carousel": "^1.8.1",
+    "viem": "^2.9.26",
+    "wagmi": "^2.5.20",
     "wowjs": "^1.1.3",
     "yup": "^1.4.0"
   },
@@ -34,6 +38,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-gtm-module": "^2.0.3",
     "@types/react-router-hash-link": "^2.4.9",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -43,6 +48,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-gtm-module": "^2.0.11",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
