--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -86,9 +86,11 @@ jobs:
       run: npm install && npm run build
       env:
         VITE_WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
-        ACTIVE_NETWORK: ${{ secrets.ACTIVE_NETWORK }}
-        EMAIL_TOKEN: ${{ secrets.EMAIL_TOKEN }}
-        AUTH_WEB_ADDRESS: ${{ secrets.AUTH_WEB_ADDRESS }}
+        VITE_ACTIVE_NETWORK: ${{ secrets.ACTIVE_NETWORK }}
+        VITE_EMAIL_SERVICE_ID: ${{ secrets.EMAIL_SERVICE_ID }}
+        VITE_EMAIL_TEMPLATE: ${{ secrets.EMAIL_TEMPLATE }}
+        VITE_EMAIL_TOKEN: ${{ secrets.EMAIL_TOKEN }}
+        VITE_AUTH_WEB_ADDRESS: ${{ secrets.AUTH_WEB_ADDRESS }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
