--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,9 +51,11 @@ jobs:
         run: npm run build
         env:
           VITE_WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
-          ACTIVE_NETWORK: ${{ secrets.ACTIVE_NETWORK }}
-          EMAIL_TOKEN: ${{ secrets.EMAIL_TOKEN }}
-          AUTH_WEB_ADDRESS: ${{ secrets.AUTH_WEB_ADDRESS }}
+          VITE_ACTIVE_NETWORK: ${{ secrets.ACTIVE_NETWORK }}
+          VITE_EMAIL_SERVICE_ID: ${{ secrets.EMAIL_SERVICE_ID }}
+          VITE_EMAIL_TEMPLATE: ${{ secrets.EMAIL_TEMPLATE }}
+          VITE_EMAIL_TOKEN: ${{ secrets.EMAIL_TOKEN }}
+          VITE_AUTH_WEB_ADDRESS: ${{ secrets.AUTH_WEB_ADDRESS }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
